# FxRPC

./: .gitignore  .gitmodules  CONFIGURATION.md  Cargo.toml  README.md  build.rs  fxmark_benchmark.csv  fxmark_grpc_benchmark.csv  rackscale_ethernet_fxmark_benchmark.csv  rackscale_shmem_fxmark_benchmark.csv  run.py
client/: Cargo.toml
client/src/: main.rs
files/: read_test.txt
fxmark/: Cargo.toml
fxmark/protos/: syscalls.proto
fxmark/src/: drpc.rs  lib.rs  main.rs
fxmark/src/fxmark/: mix.rs  mod.rs
fxmark/src/fxrpc/: grpc.rs  mod.rs  rpc.rs
fxmark/src/fxrpc/drpc/: client.rs  fileops.rs  mod.rs  server.rs
fxmark/src/fxrpc/grpc/: client.rs  mod.rs  server.rs
fxmark/tests/: tcp.rs  uds.rs
memcached/: Cargo.toml  README.md  qemu_affinity.py  run.py
memcached/src/: builder.rs  main.rs
prog/: Cargo.toml
prog/src/: lib.rs  main.rs
prog/src/fxmark/: mix.rs  mod.rs
prog/tests/: server_tests.rs  tcp_tests.rs  uds_tests.rs
protos/: syscalls.proto
run/: Cargo.toml  run.py
run/src/: main.rs
server/: Cargo.toml  build.rs
server/src/: main.rs
server/tests/: server_tests.rs
src/: lib.rs  main.rs
src/fxmark/: drbh.rs  dwol.rs  mix.rs  mix_old.rs  mod.rs  mwrl.rs  mwrm.rs  oldmod.rs
src/fxmark/bench/: drbh.rs  drbl.rs  dwal.rs  dwom.rs  mix.rs
tests/: server_tests.rs
tools/: create_disk_image.py
