[package]
name = "fxmark_grpc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
prost = "0.11.9"
tonic = "0.9.2"
tokio = { version = "1.19.2", features = ["macros", "rt-multi-thread"] }
libc = "0.2.146"
futures = "0.3.28"
nrfs = { git="https://github.com/ankit-iitb/nrfs.git" }
hwloc2 = "2.2.0"
num_cpus = "1.12"
core_affinity = "0.5.10"
serde = { version = "1", features = ["derive"] }
clap = { version = "2", features = ["yaml"] }
nix = "0.17.0"
x86 = "0.52.0"

[build-dependencies]
tonic-build = "0.9.2"
